gce-rke-cluster/deploy/platform-monitoring/grafana-platform-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-platform-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  tls:
    - hosts:
      - grafana-platform.gcp-rke-demo.its-software-services.com
      secretName: grafana-platform-cert
  rules:
    - host: grafana-platform.gcp-rke-demo.its-software-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-platform
                port:
                  number: 80
