gce-rke-cluster/deploy/platform-monitoring/prometheus-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-platform-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  tls:
    - hosts:
      - prometheus-platform.gcp-rke-demo.its-software-services.com
      secretName: prometheus-platform-cert
  rules:
    - host: prometheus-platform.gcp-rke-demo.its-software-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
---
# Will remove
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: alertmanager-platform-ing
#  annotations:
#    nginx.ingress.kubernetes.io/backend-protocol: HTTP
#spec:
#  tls:
#    - hosts:
#      - alertmanager-platform.gcp-rke-demo.its-software-services.com
#      secretName: alertmanager-platform-cert
#  rules:
#    - host: alertmanager-platform.gcp-rke-demo.its-software-services.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: kube-prometheus-stack-alertmanager
#                port:
#                  number: 9093
